[package]
name = "rust-yespower"
version = "0.2.0"
authors = ["Yar <idquantum@gmail.com>"]
edition = "2021"
rust-version = "1.94.1"
description = "Tidecoin yespower proof-of-work hashing."
license = "MIT AND BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/yarsawyer/rust-yespower"
keywords = ["yespower", "tidecoin", "pow"]
categories = ["cryptography::cryptocurrencies"]
exclude = ["/target", "/Cargo.lock", "**/*.a", "**/*.o", "**/*.obj", "**/*.lib"]

[features]
default = []
std = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
hex = "0.4.3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
